@@ -1,7 +1,7 @@
 Package: Matrix
 Version: 1.7-3
 VersionNote: do also bump src/version.h, inst/include/Matrix/version.h
-Date: 2025-02-23
+Date: 2025-02-27
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Description: A rich hierarchy of sparse and dense matrix classes,
